# song_player

./: CMakeLists.txt  CmakeLists000.txt  README.md  backpic.cpp  backpic.h  backpic.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylrc.cpp  mylrc.h  mymaintable.cpp  mymaintable.h  song_image.qrc  songplayer.lnk  ui_backpic.h  ui_mainwindow.h
